# lavender

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  book.toml  build-book.sh  package-lock.json  package.json  prettier.config.js  tsconfig.json  webpack.config.js
.github/workflows/: main.yml  pages.yml
advance/: Cargo.toml  lib.rs  memory.rs  package.json
advance/armv4t/: arm.rs  arm_tests.rs  mod.rs  thumb_tests.rs
armv4t/: Cargo.toml  arm7tdmi.rs  conditions.rs  ende.rs  lib.rs  modes.rs  registers.rs
armv4t/instructions/: adc.rs
book/: SUMMARY.md  index.html  intro.md  print.html  references.html  references.md  scratch.html  scratch.md  searchindex.js  searchindex.json  specs.md
book/arch/: debugging.md  isa.md
book/interaction/: graphics.md  io.md
client/: client.css  client.js  client.test.js  client.tsx  index.html  overlay.tsx  webgl-demo.js
doc/book/: README.md  bios.md  book.toml  intro.md
doc/book/arch/: arch.md
gb/: Cargo.toml
gbadvance/: Cargo.toml  emulator.rs  memory.rs
gbadvance/armv4t/: utils.rs
gbcolor/: Cargo.toml  lib.rs
lavender/: Cargo.toml  package.json
lavender-app/: .eslintrc.json  jest.config.js  package.json  tsconfig.json  webpack.config.js
lavender-app/src/: app.ts
lavender-app/src/@types/: Lavender.d.ts  wasm.d.ts  webpack.d.ts
lavender-app/src/components/: Overlay.tsx
lavender-book/: book.toml
lavender-book/src/: memory.md  references.md  scratch.md
lavender-book/src/arch/: timing.md
lavender-book/src/interaction/: audio.md
lavender/src/: lib.rs
lavender/src/emulator/: cpu.rs  memory.rs  mod.rs
lavender/src/emulator/arm/: mod.rs  register_set.rs
lavender/src/emulator/arm/instructions/: adc.rs  mod.rs
lavender/src/emulator/armv4t/: arm.rs  arm_tests.rs  thumb.rs  utils.rs
lr35902/: Cargo.toml  lib.rs
reference/: SUMMARY.md  arch.md  disassembly.md  interaction.md  intro.md  io.md  mem.md  memory.md  references.md  saves.md  scratch.md  specs.md  testing.md
reference/arch/: isa.md  timing.md
reference/interaction/: io.md
src/: lib.rs
src/emulator/: bios.rs  cpu.rs  io.rs  memory.rs  mod.rs
src/emulator/armv4t/: arm.rs  arm_tests.rs  mod.rs  tests.rs  thumb.rs  utils.rs
