[package]
name = "lavender_advance"
version = "0.0.1"
authors = ["McKayla Washburn <mckayla@hey.com"]
description = "A Gameboy Advanced emulator written in Rust"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "./lib.rs"

[dependencies]
console_error_panic_hook = "0.1.6"
lavender_armv4t = { workspace = true }
lazy_static = "1.4.0"
num_enum = { workspace = true }
wasm-bindgen = "0.2.87"
