[package]
name = "lavender_gbcolor"
version = "0.0.1"
authors = ["McKayla Washburn <mckayla@hey.com>"]
description = "A Gameboy Color emulator written in Rust"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "./lib.rs"

[dependencies]
lavender_armv4t = { workspace = true }

wasm-bindgen = "0.2.87"
