[package]
name = "lavender"
version = "0.0.1"
authors = ["McKayla Washburn <mckayla@hey.com"]
description = "A Gameboy Advanced emulator written in Rust"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
lazy_static = "1.4.0"
num_enum = "0.5.3"
wasm-bindgen = "0.2.75"
